--- a/README.Rmd
+++ b/README.Rmd
@@ -13,17 +13,17 @@ knitr::opts_chunk$set(
 )
 ```
 
-# opengraph
+# opengraph <img src="man/figures/logo.png" align="right" height="132" alt="" />
 
 <!-- badges: start -->
   [![R-CMD-check](https://github.com/christopherkenny/opengraph/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/christopherkenny/opengraph/actions/workflows/R-CMD-check.yaml)
   <!-- badges: end -->
 
-The goal of opengraph is to ...
+The goal of `opengraph` is to read and process Open Graph Protocol HTML on websites.
 
 ## Installation
 
-You can install the development version of opengraph from [GitHub](https://github.com/) with:
+You can install the development version of `opengraph` from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages('pak')
@@ -37,20 +37,8 @@ This is a basic example which shows you how to solve a common problem:
 ```{r example}
 library(opengraph)
 ## basic example code
+url <- "https://www.r-project.org/"
+og_parse(url)
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
 
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
